# burp

./: .gitignore  .gitmodules  Cargo.toml  README.md  Readme.md  burp-arx  default.nix  flake.nix  milestones.md  rust-toolchain.toml  todos.md
burp/: Cargo.toml
burp-gui/: Cargo.toml
burp-gui/src/: lib.rs  main.rs  oracle.rs  run_ui.rs  types.rs
burp-gui/src/map/: layers.rs  mod.rs  symbols.rs
burp-gui/src/map/layers/: line_layer.rs  mod.rs  oracle_layer.rs  poly_layer.rs
burp-gui/src/state/: egui_state.rs  galileo_state.rs  mod.rs  ui_state.rs
burp/benches/: beer_path.rs  dijkstra.rs  oracle.rs
burp/src/: events.rs  galileo.rs  lib.rs  main.rs  run_ui.rs
burp/src/graph/: mod.rs  oracle.rs
burp/src/input/: geo_zero.rs  mod.rs
burp/src/oracle/: mod.rs  oracle.rs
burp/src/serde/: mod.rs
burp/src/state/: galileo_state.rs  mod.rs
burp/src/types/: mod.rs
burp/tests/: integration_test.rs
burp/tests/common/: mod.rs
crates/burp/: Cargo.toml  README.md
crates/burp-gui/: Cargo.toml
crates/burp-gui/src/: app.rs  event_handler.rs  lib.rs  main.rs  run_ui.rs  types.rs
crates/burp-gui/src/app/: app_data.rs
crates/burp-gui/src/map/: egui_state.rs  mod.rs  symbols.rs
crates/burp-gui/src/map/egui/: mod.rs  state.rs
crates/burp-gui/src/map/layers/: block_pair_layer.rs  line_layer.rs  mod.rs  node_layer.rs  oracle_layer.rs
crates/burp-gui/src/state/: galileo_state.rs  mod.rs
crates/burp-gui/src/widgets/: map.rs  mod.rs  modals.rs  open_file.rs  tree_view.rs
crates/burp/benches/: beer_path.rs  dijkstra.rs  oracle.rs
crates/burp/src/: bench.rs  lib.rs  main.rs  util.rs
crates/burp/src/graph/: mod.rs  oracle.rs
crates/burp/src/input/: geo_zero.rs  mod.rs
crates/burp/src/oracle/: block_pair.rs  mod.rs  oracle.rs  params.rs  split_strategy.rs
crates/burp/src/serde/: mod.rs
crates/burp/src/tree/: iter.rs  mod.rs  node.rs
crates/burp/src/types/: mod.rs
crates/burp/tests/: integration_test.rs
crates/burp/tests/common/: mod.rs
crates/graph-rs/: Cargo.toml  README.md
crates/graph-rs/src/: geo_types.rs  lib.rs  macros.rs  types.rs
crates/graph-rs/src/algorithms/: dijkstra.rs  trajan_scc.rs
crates/graph-rs/src/builder/: mod.rs
crates/graph-rs/src/graph/: csr.rs  mod.rs  quad_tree.rs  rstar.rs
crates/graph-rs/src/input/: edgelist.rs  geo_zero.rs  mod.rs
crates/workspace-hack/: Cargo.toml
graph-rs/: Cargo.toml
graph-rs/src/: geo_types.rs  lib.rs  types.rs
graph-rs/src/algorithms/: dijkstra.rs  mod.rs  trajan_scc.rs
graph-rs/src/graph/: csr.rs  mod.rs  quad_tree.rs  rstar.rs
graph-rs/src/input/: edgelist.rs  geo_zero.rs  mod.rs
report/: cetz-figures.typ  main.typ
resources/: Berlin.geojson.REMOVED.git-id  Berlin_amenities.geojson  Berlin_geojson_uid_0244ad31-87ea-42dd-87d5-be26487775e1.zip.REMOVED.git-id  Berlin_shp_uid_84e39c42-2449-44f2-9546-1ab1dd4c596d.zip.REMOVED.git-id  Konstanz_Paradies.geojson  Konstanz_Paradies_amenities.geojson  Konstanz_Paradies_small.geojson  Konstanz_Paradies_small_amenities.geojson  Readme.txt  clipping_boundary_amenities.geojson  medium_poi.gmp  small_poi.gfb  small_poi.gmp
src/: graph.rs  lib.rs  main.rs  run_ui.rs
src/state/: galileo_state.rs  mod.rs
thesis/: cetz-elements.typ  cetz-figures.typ  main.typ  sources.bib
workspace-hack/: Cargo.toml
