[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "burp"
authors = ["Jakob Sanowski <jakob.sanowski@sanbach.de>"]
categories = ["science::geo"]
edition = "2024"
keywords = ["gis", "map"]
license = "GPL-3"
repository = "https://gitlab.inf.uni-konstanz.de/jakob.sanowski/bachelor-projekt"
version = "0.1.0"

[workspace.metadata]
crane.name = "burp"

[workspace.dependencies]
rustc-hash = { version = "2.1" }
ashpd = { version = "0.11.0", features = ["raw_handle", "wayland", "tracing"] }
egui = "0.32"
egui-wgpu = "0.32"
egui-winit = { version = "0.32", default-features = false, features = [
  "clipboard",
  "links",
  "wayland",
] }
egui-modal = "0.7"
eframe = "0.32"
galileo = { version = "0.2.1" }
galileo-types = { version = "0.2.1" }
galileo-egui = { version = "0.2.1" }
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tracy = "0.11.4"
tracy-client = "=0.18.0"
tracing-timing = "0.7.0"
id_tree = { version = "1.8.0", features = ["serde_support"] }
wgpu = { version = "25" }
winit = { version = "0.30" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
burp = { path = "crates/burp/" }
maybe-sync = "0.1"
nalgebra = "0.32"
num-traits = "0.2"
tokio = { version = "1.46", default-features = false, features = ["full"] }
rstar = "0.12"
memmap2 = "0.9.5"
rmp-serde = "1.3.0"
graph-rs = { path = "crates/graph-rs/" }
geozero = "0.13"
geo-types = { version = "0.7", features = ["use-rstar_0_12"] }
geo = { version = "0.28", features = ["use-serde"] }
log = "0.4.20"
env_logger = { version = "0.11", default-features = false }
serde_test = "1.0"
ordered-float = { version = "4.2", features = ["serde"] }
rayon = { version = "1.10" }
clap = { version = "4.5", features = ["derive"] }
priority-queue = "2.0"
rand = { version = "0.9", features = ["small_rng"] }
indicatif = "0.17"
approx = "0.5"
bincode = { version = "2.0.1", features = ["serde"] }

[patch.crates-io]
egui-modal = { git = "https://github.com/LinoBigatti/egui-modal.git", branch = "main" }
galileo = { git = "https://github.com/Maximkaaa/galileo.git", branch = "main" }
galileo-types = { git = "https://github.com/Maximkaaa/galileo.git", branch = "main" }
galileo-egui = { git = "https://github.com/Maximkaaa/galileo.git", branch = "main" }
