[package]
name = "burp-gui"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "burp-gui"


[dependencies]
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = { version = "0.28", default-features = false, features = [
  "clipboard",
  "links",
  "wayland",
  "x11",
] }
env_logger = { version = "0.11", default-features = false }
galileo = { git = "https://github.com/tuxerator/galileo.git" }
galileo-types = { git = "https://github.com/tuxerator/galileo.git" }
wgpu = { version = "0.20", default-features = false }
winit = { version = "0.29", default-features = false }
petgraph = "0.6"
graph-rs = { path = "../graph-rs/" }
geozero = "0.13"
ordered-float = "4.2"
geo-types = "0.7"
geo = "0.28"
rfd = { version = "0.14", default-features = false, features = [
  "xdg-portal",
  "tokio",
] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
burp = { path = "../burp/" }
maybe-sync = "0.1"
nalgebra = "0.32"
image = "0.25"
num-traits = "0.2"
tokio = { version = "1.0", default-features = false, features = ["full"] }
lazy_static = "1.5"
