[package]
name = "burp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = { version = "0.11", default-features = false }
petgraph = "0.6"
graph-rs = { path = "../graph-rs/" }
geozero = "0.13"
ordered-float = "4.2"
geo-types = "0.7"
geo = "0.28"
rfd = { version = "0.14", default-features = false, features = [
  "xdg-portal",
  "tokio",
] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
flexbuffers = { version = "2.0" }
rayon = { version = "1.10" }
galileo = { git = "https://github.com/tuxerator/galileo.git" }
num-traits = "0.2"
clap = { version = "4.5", features = ["derive"] }
priority-queue = "2.0"

[dev-dependencies]
criterion = { version = "0.5" }
rand = "0.8"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", default-features = false, features = ["full"] }

[[bench]]
name = "dijkstra"
harness = false
