[package]
name = "burp-gui"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "burp-gui"


[dependencies]
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = { version = "0.28", default-features = false, features = [
  "clipboard",
  "links",
  "wayland",
] }
env_logger = { version = "0.11", default-features = false }
galileo = { git = "https://github.com/tuxerator/galileo.git", rev = "ff2f83f49245c854f88286488a33158fcf4a61b8" }
galileo-types = { git = "https://github.com/tuxerator/galileo.git", rev = "ff2f83f49245c854f88286488a33158fcf4a61b8" }
wgpu = { version = "0.20", default-features = false }
winit = { version = "0.29", default-features = false, features = [
  "rwh_06",
  "wayland",
  "wayland-csd-adwaita",
  "wayland-dlopen",
] }
graph-rs = { path = "../graph-rs/" }
geozero = "0.13"
geo-types = "0.7"
geo = "0.28"
rfd = { version = "0.14", default-features = false, features = [
  "xdg-portal",
  "tokio",
] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
burp = { path = "../burp/" }
maybe-sync = "0.1"
nalgebra = "0.32"
num-traits = "0.2"
tokio = { version = "1.0", default-features = false, features = ["full"] }
rstar = "0.12"
rustc-hash = "2.1"
memmap2 = "0.9.5"
rmp-serde = "1.3.0"
