[package]
name = "burp-gui"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "burp-gui"


[dependencies]
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui-modal.workspace = true
eframe.workspace = true
env_logger.workspace = true
galileo = { workspace = true }
galileo-types = { workspace = true }
galileo-egui = { workspace = true }
wgpu = { workspace = true }
winit.workspace = true
ashpd.workspace = true
parking_lot.workspace = true
graph-rs.workspace = true
geozero.workspace = true
geo-types.workspace = true
geo.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-tracy.workspace = true
tracy-client.workspace = true
serde.workspace = true
serde_json.workspace = true
burp.workspace = true
maybe-sync.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
tokio.workspace = true
rstar.workspace = true
rustc-hash.workspace = true
memmap2.workspace = true
rmp-serde.workspace = true
id_tree.workspace = true


[features]
tracy = ["tracing-tracy/enable"]
