[package]
name = "burp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_test = "1.0"
serde_json = "1.0"
geo-types = { version = "0.7.9", features = ["serde", "use-rstar_0_12"] }
env_logger = { version = "0.11", default-features = false }
graph-rs = { path = "../graph-rs/" }
geozero = "0.13"
ordered-float = "4.2"
geo = { version = "0.28", default-features = true, features = ["serde"] }
log = "0.4.20"
flexbuffers = { version = "2.0" }
rayon = { version = "1.10" }
num-traits = "0.2"
clap = { version = "4.5", features = ["derive"] }
priority-queue = "2.0"
qutee = "0.2"
rand = "0.9"
indicatif = "0.17"
rstar = { version = "0.12" }
rustc-hash = "2.1"
deepsize = "0.2.0"
memmap2 = "0.9.5"
rmp-serde = "1.3.0"

[dev-dependencies]
criterion = { version = "0.5" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", default-features = false, features = ["full"] }

[profile.dev]
debug = 1

[features]
dhat-heap = []
dhat-ad-hoc = []

[[bench]]
name = "dijkstra"
harness = false

[[bench]]
name = "oracle"
harness = false

[[bench]]
name = "beer_path"
harness = false
