[package]
name = "burp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["rc"] }
serde_test.workspace = true
serde_json.workspace = true
geo-types.workspace = true
env_logger.workspace = true
graph-rs.workspace = true
geozero.workspace = true
ordered-float.workspace = true
geo.workspace = true
log.workspace = true
rayon.workspace = true
num-traits.workspace = true
clap.workspace = true
priority-queue.workspace = true
rand.workspace = true
indicatif.workspace = true
rstar.workspace = true
rustc-hash.workspace = true
memmap2.workspace = true
rmp-serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-timing.workspace = true
tracing-tracy.workspace = true
tracy-client.workspace = true
id_tree.workspace = true

[dev-dependencies]
divan = { version = "0.1.21" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[profile.dev]
debug = 1


[[bench]]
name = "oracle"
harness = false
