[package]
name = "graph-rs"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
osmpbfreader = { version = "0.16.1" }
geozero = { version = "0.12.0" }
geo = { version = "0.28.0", features = ["use-serde"] }
geo-types = { version = "0.7", features = ["use-rstar_0_12"] }
ordered-float = { version = "4.2.0", features = ["serde", "std"] }
qutee = "0.2"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytemuck = "1.16"
num-traits = { version = "0.2", features = ["std"] }
priority-queue = "2.0"
rayon = "1.10"
rstar = { version = "0.12", features = ["serde"] }
rustc-hash = "2.1"
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-tracy.workspace = true
tracy-client.workspace = true

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
