[package]
name = "graph-rs"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
geozero.workspace = true
geo.workspace = true
geo-types.workspace = true
ordered-float.workspace = true
approx.workspace = true
serde.workspace = true
num-traits.workspace = true
priority-queue.workspace = true
rayon.workspace = true
rstar = { workspace = true, features = ["serde"] }
rustc-hash.workspace = true
parking_lot.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-tracy.workspace = true
tracy-client.workspace = true

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
